@@ -13,6 +13,8 @@ https://github.com/krang-8/Group-Ting-Fam (Access is required as the repository 
 2.     Extract the files 
 3.     Import it into IDE 
        Eclipse or IntelliJ
+      
+
 4.     Run the main class In the JavaFx Application located through the packages at
        /View.javafx/ApplicationWindow.
        
@@ -24,5 +26,7 @@ https://github.com/krang-8/Group-Ting-Fam (Access is required as the repository 
                  <javafx
                         =class ApplicationWindow
                         
+       if it doesn't work add this commandline to your VM Configurations : --module-path "(Path to javafx Library)" --add-modules javafx.controls,javafx.fxml
+                 
 5.     In terms of the application itself the project is almost finished developing 
        the view and controllers                                      
